@@ -59,11 +59,11 @@ import java.util.TreeSet;
  * checking and type coersion for you.
  * <p>
  * The <code>put</code> methods adds values to an object. For example,
- * 
+ *
  * <pre>
  * myString = new JSONObject().put(&quot;JSON&quot;, &quot;Hello, World!&quot;).toString();
  * </pre>
- * 
+ *
  * produces the string <code>{"JSON": "Hello, World"}</code>.
  * <p>
  * The texts produced by the <code>toString</code> methods strictly conform to the JSON sysntax rules. The constructors are more forgiving in the texts they will accept:
@@ -77,7 +77,7 @@ import java.util.TreeSet;
  * <li>Numbers may have the <code>0-</code> <small>(octal)</small> or <code>0x-</code> <small>(hex)</small> prefix.</li>
  * <li>Comments written in the slashshlash, slashstar, and hash conventions will be ignored.</li>
  * </ul>
- * 
+ *
  * @author JSON.org
  * @version 2
  */
@@ -93,7 +93,7 @@ public class JSONObject implements Serializable {
         /**
          * There is only intended to be a single instance of the NULL object,
          * so the clone method returns itself.
-         * 
+         *
          * @return NULL.
          */
         protected final Object clone() {
@@ -102,7 +102,7 @@ public class JSONObject implements Serializable {
 
         /**
          * A Null object is equal to the null value and to itself.
-         * 
+         *
          * @param object An object to test for nullness.
          * @return true if the object parameter is the JSONObject.NULL object
          *         or null.
@@ -113,7 +113,7 @@ public class JSONObject implements Serializable {
 
         /**
          * Get the "null" string value.
-         * 
+         *
          * @return The string "null".
          */
         public String toString() {
@@ -124,7 +124,7 @@ public class JSONObject implements Serializable {
     /**
      * The hash map where the JSONObject's properties are kept.
      */
-    private HashMap myHashMap;
+    private final HashMap myHashMap;
 
     /**
      * It is sometimes more convenient and less ambiguous to have a <code>NULL</code> object than to use Java's <code>null</code> value. <code>JSONObject.NULL.equals(null)</code> returns
@@ -143,21 +143,21 @@ public class JSONObject implements Serializable {
      * Construct a JSONObject from a subset of another JSONObject.
      * An array of strings is used to identify the keys that should be copied.
      * Missing keys are ignored.
-     * 
+     *
      * @param jo A JSONObject.
      * @param sa An array of strings.
      * @exception JSONException If a value is a non-finite number.
      */
     public JSONObject(JSONObject jo, String[] sa) throws JSONException {
         this();
-        for (int i = 0; i < sa.length; i += 1) {
-            putOpt(sa[i], jo.opt(sa[i]));
+        for (String s : sa) {
+            putOpt(s, jo.opt(s));
         }
     }
 
     /**
      * Construct a JSONObject from a JSONTokener.
-     * 
+     *
      * @param x A JSONTokener object containing the source string.
      * @throws JSONException this will be thrown if there is an error parsing the JSON If there is a syntax error in the source string.
      */
@@ -172,13 +172,13 @@ public class JSONObject implements Serializable {
         for (;;) {
             c = x.nextClean();
             switch (c) {
-            case 0:
-                throw x.syntaxError("A JSONObject text must end with '}'");
-            case '}':
-                return;
-            default:
-                x.back();
-                key = x.nextValue().toString();
+                case 0:
+                    throw x.syntaxError("A JSONObject text must end with '}'");
+                case '}':
+                    return;
+                default:
+                    x.back();
+                    key = x.nextValue().toString();
             }
 
             /*
@@ -200,24 +200,24 @@ public class JSONObject implements Serializable {
              */
 
             switch (x.nextClean()) {
-            case ';':
-            case ',':
-                if (x.nextClean() == '}') {
+                case ';':
+                case ',':
+                    if (x.nextClean() == '}') {
+                        return;
+                    }
+                    x.back();
+                    break;
+                case '}':
                     return;
-                }
-                x.back();
-                break;
-            case '}':
-                return;
-            default:
-                throw x.syntaxError("Expected a ',' or '}'");
+                default:
+                    throw x.syntaxError("Expected a ',' or '}'");
             }
         }
     }
 
     /**
      * Construct a JSONObject from a Map.
-     * 
+     *
      * @param map A map object that can be used to initialize the contents of
      *            the JSONObject.
      */
@@ -233,21 +233,20 @@ public class JSONObject implements Serializable {
      * from the names array, and the values will be the field values associated
      * with those keys in the object. If a key is not found or not visible,
      * then it will not be copied into the new JSONObject.
-     * 
+     *
      * @param object An object that has fields that should be used to make a
      *            JSONObject.
      * @param names An array of strings, the names of the fields to be used
      *            from the object.
      */
-    public JSONObject(Object object, String names[]) {
+    public JSONObject(Object object, String[] names) {
         this();
         Class c = object.getClass();
-        for (int i = 0; i < names.length; i += 1) {
+        for (String s : names) {
             try {
-                String name = names[i];
-                Field field = c.getField(name);
+                Field field = c.getField(s);
                 Object value = field.get(object);
-                this.put(name, value);
+                this.put(s, value);
             } catch (Exception e) {
                 /* forget about it */
             }
@@ -257,7 +256,7 @@ public class JSONObject implements Serializable {
     /**
      * Construct a JSONObject from a string.
      * This is the most commonly used JSONObject constructor.
-     * 
+     *
      * @param string A string beginning
      *            with <code>{</code>&nbsp;<small>(left brace)</small> and ending
      *            with <code>}</code>&nbsp;<small>(right brace)</small>.
@@ -273,7 +272,7 @@ public class JSONObject implements Serializable {
      * JSONArray is stored under the key to hold all of the accumulated values.
      * If there is already a JSONArray, then the new value is appended to it.
      * In contrast, the put method replaces the previous value.
-     * 
+     *
      * @param key A key string.
      * @param value An object to be accumulated under the key.
      * @return this.
@@ -299,7 +298,7 @@ public class JSONObject implements Serializable {
      * JSONObject, then the key is put in the JSONObject with its value being a
      * JSONArray containing the value parameter. If the key was already
      * associated with a JSONArray, then the value parameter is appended to it.
-     * 
+     *
      * @param key A key string.
      * @param value An object to be accumulated under the key.
      * @return this.
@@ -327,7 +326,7 @@ public class JSONObject implements Serializable {
     /**
      * Produce a string from a double. The string "null" will be returned if
      * the number is not finite.
-     * 
+     *
      * @param d A double.
      * @return A String.
      */
@@ -352,7 +351,7 @@ public class JSONObject implements Serializable {
 
     /**
      * Get the value object associated with a key.
-     * 
+     *
      * @param key A key string.
      * @return The object associated with the key.
      * @throws JSONException if the key is not found.
@@ -368,7 +367,7 @@ public class JSONObject implements Serializable {
 
     /**
      * Get the boolean value associated with a key.
-     * 
+     *
      * @param key A key string.
      * @return The truth.
      * @throws JSONException
@@ -378,11 +377,11 @@ public class JSONObject implements Serializable {
         Object o = get(key);
         if (o.equals(Boolean.FALSE) ||
                 (o instanceof String &&
-                ((String) o).equalsIgnoreCase("false"))) {
+                        ((String) o).equalsIgnoreCase("false"))) {
             return false;
         } else if (o.equals(Boolean.TRUE) ||
                 (o instanceof String &&
-                ((String) o).equalsIgnoreCase("true"))) {
+                        ((String) o).equalsIgnoreCase("true"))) {
             return true;
         }
         throw new JSONException("JSONObject[" + quote(key) +
@@ -391,7 +390,7 @@ public class JSONObject implements Serializable {
 
     /**
      * Get the double value associated with a key.
-     * 
+     *
      * @param key A key string.
      * @return The numeric value.
      * @throws JSONException this will be thrown if there is an error parsing the JSON if the key is not found or
@@ -402,7 +401,7 @@ public class JSONObject implements Serializable {
         try {
             return o instanceof Number ?
                     ((Number) o).doubleValue() :
-                    Double.valueOf((String) o).doubleValue();
+                    Double.parseDouble((String) o);
         } catch (Exception e) {
             throw new JSONException("JSONObject[" + quote(key) +
                     "] is not a number.");
@@ -412,7 +411,7 @@ public class JSONObject implements Serializable {
     /**
      * Get the int value associated with a key. If the number value is too
      * large for an int, it will be clipped.
-     * 
+     *
      * @param key A key string.
      * @return The integer value.
      * @throws JSONException if the key is not found or if the value cannot
@@ -426,7 +425,7 @@ public class JSONObject implements Serializable {
 
     /**
      * Get the JSONArray value associated with a key.
-     * 
+     *
      * @param key A key string.
      * @return A JSONArray which is the value.
      * @throws JSONException if the key is not found or
@@ -443,7 +442,7 @@ public class JSONObject implements Serializable {
 
     /**
      * Get the JSONObject value associated with a key.
-     * 
+     *
      * @param key A key string.
      * @return A JSONObject which is the value.
      * @throws JSONException if the key is not found or
@@ -461,7 +460,7 @@ public class JSONObject implements Serializable {
     /**
      * Get the long value associated with a key. If the number value is too
      * long for a long, it will be clipped.
-     * 
+     *
      * @param key A key string.
      * @return The long value.
      * @throws JSONException if the key is not found or if the value cannot
@@ -475,7 +474,7 @@ public class JSONObject implements Serializable {
 
     /**
      * Get the string associated with a key.
-     * 
+     *
      * @param key A key string.
      * @return A string which is the value.
      * @throws JSONException if the key is not found.
@@ -486,7 +485,7 @@ public class JSONObject implements Serializable {
 
     /**
      * Determine if the JSONObject contains a specific key.
-     * 
+     *
      * @param key A key string.
      * @return true if the key exists in the JSONObject.
      */
@@ -497,7 +496,7 @@ public class JSONObject implements Serializable {
     /**
      * Determine if the value associated with the key is null or if there is
      * no value.
-     * 
+     *
      * @param key A key string.
      * @return true if there is no value associated with the key or if
      *         the value is the JSONObject.NULL object.
@@ -508,7 +507,7 @@ public class JSONObject implements Serializable {
 
     /**
      * Get an enumeration of the keys of the JSONObject.
-     * 
+     *
      * @return An iterator of the keys.
      */
     public Iterator keys() {
@@ -523,7 +522,7 @@ public class JSONObject implements Serializable {
 
     /**
      * Get the number of keys stored in the JSONObject.
-     * 
+     *
      * @return The number of keys in the JSONObject.
      */
     public int length() {
@@ -533,7 +532,7 @@ public class JSONObject implements Serializable {
     /**
      * Produce a JSONArray containing the names of the elements of this
      * JSONObject.
-     * 
+     *
      * @return A JSONArray containing the key strings, or null if the JSONObject
      *         is empty.
      */
@@ -548,7 +547,7 @@ public class JSONObject implements Serializable {
 
     /**
      * Produce a string from a Number.
-     * 
+     *
      * @param n A Number
      * @return A String.
      * @throws JSONException this will be thrown if there is an error parsing the JSON If n is a non-finite number.
@@ -576,7 +575,7 @@ public class JSONObject implements Serializable {
 
     /**
      * Get an optional value associated with a key.
-     * 
+     *
      * @param key A key string.
      * @return An object which is the value, or null if there is no value.
      */
@@ -588,7 +587,7 @@ public class JSONObject implements Serializable {
      * Get an optional boolean associated with a key.
      * It returns false if there is no such key, or if the value is not
      * Boolean.TRUE or the String "true".
-     * 
+     *
      * @param key A key string.
      * @return The truth.
      */
@@ -600,7 +599,7 @@ public class JSONObject implements Serializable {
      * Get an optional boolean associated with a key.
      * It returns the defaultValue if there is no such key, or if it is not
      * a Boolean or the String "true" or "false" (case insensitive).
-     * 
+     *
      * @param key A key string.
      * @param defaultValue The default.
      * @return The truth.
@@ -616,7 +615,7 @@ public class JSONObject implements Serializable {
     /**
      * Put a key/value pair in the JSONObject, where the value will be a
      * JSONArray which is produced from a Collection.
-     * 
+     *
      * @param key A key string.
      * @param value A Collection value.
      * @return this.
@@ -632,7 +631,7 @@ public class JSONObject implements Serializable {
      * or NaN if there is no such key or if its value is not a number.
      * If the value is a string, an attempt will be made to evaluate it as
      * a number.
-     * 
+     *
      * @param key A string which is the key.
      * @return An object which is the value.
      */
@@ -645,7 +644,7 @@ public class JSONObject implements Serializable {
      * defaultValue if there is no such key or if its value is not a number.
      * If the value is a string, an attempt will be made to evaluate it as
      * a number.
-     * 
+     *
      * @param key A key string.
      * @param defaultValue The default.
      * @return An object which is the value.
@@ -654,7 +653,7 @@ public class JSONObject implements Serializable {
         try {
             Object o = opt(key);
             return o instanceof Number ? ((Number) o).doubleValue() :
-                    new Double((String) o).doubleValue();
+                    Double.parseDouble((String) o);
         } catch (Exception e) {
             return defaultValue;
         }
@@ -665,7 +664,7 @@ public class JSONObject implements Serializable {
      * or zero if there is no such key or if the value is not a number.
      * If the value is a string, an attempt will be made to evaluate it as
      * a number.
-     * 
+     *
      * @param key A key string.
      * @return An object which is the value.
      */
@@ -678,7 +677,7 @@ public class JSONObject implements Serializable {
      * or the default if there is no such key or if the value is not a number.
      * If the value is a string, an attempt will be made to evaluate it as
      * a number.
-     * 
+     *
      * @param key A key string.
      * @param defaultValue The default.
      * @return An object which is the value.
@@ -695,7 +694,7 @@ public class JSONObject implements Serializable {
      * Get an optional JSONArray associated with a key.
      * It returns null if there is no such key, or if its value is not a
      * JSONArray.
-     * 
+     *
      * @param key A key string.
      * @return A JSONArray which is the value.
      */
@@ -708,7 +707,7 @@ public class JSONObject implements Serializable {
      * Get an optional JSONObject associated with a key.
      * It returns null if there is no such key, or if its value is not a
      * JSONObject.
-     * 
+     *
      * @param key A key string.
      * @return A JSONObject which is the value.
      */
@@ -722,7 +721,7 @@ public class JSONObject implements Serializable {
      * or zero if there is no such key or if the value is not a number.
      * If the value is a string, an attempt will be made to evaluate it as
      * a number.
-     * 
+     *
      * @param key A key string.
      * @return An object which is the value.
      */
@@ -735,7 +734,7 @@ public class JSONObject implements Serializable {
      * or the default if there is no such key or if the value is not a number.
      * If the value is a string, an attempt will be made to evaluate it as
      * a number.
-     * 
+     *
      * @param key A key string.
      * @param defaultValue The default.
      * @return An object which is the value.
@@ -752,7 +751,7 @@ public class JSONObject implements Serializable {
      * Get an optional string associated with a key.
      * It returns an empty string if there is no such key. If the value is not
      * a string and is not null, then it is coverted to a string.
-     * 
+     *
      * @param key A key string.
      * @return A string which is the value.
      */
@@ -763,7 +762,7 @@ public class JSONObject implements Serializable {
     /**
      * Get an optional string associated with a key.
      * It returns the defaultValue if there is no such key.
-     * 
+     *
      * @param key A key string.
      * @param defaultValue The default.
      * @return A string which is the value.
@@ -775,7 +774,7 @@ public class JSONObject implements Serializable {
 
     /**
      * Put a key/boolean pair in the JSONObject.
-     * 
+     *
      * @param key A key string.
      * @param value A boolean which is the value.
      * @return this.
@@ -788,47 +787,47 @@ public class JSONObject implements Serializable {
 
     /**
      * Put a key/double pair in the JSONObject.
-     * 
+     *
      * @param key A key string.
      * @param value A double which is the value.
      * @return this.
      * @throws JSONException this will be thrown if there is an error parsing the JSON If the key is null or if the number is invalid.
      */
     public JSONObject put(String key, double value) throws JSONException {
-        put(key, new Double(value));
+        put(key, Double.valueOf(value));
         return this;
     }
 
     /**
      * Put a key/int pair in the JSONObject.
-     * 
+     *
      * @param key A key string.
      * @param value An int which is the value.
      * @return this.
      * @throws JSONException this will be thrown if there is an error parsing the JSON If the key is null.
      */
     public JSONObject put(String key, int value) throws JSONException {
-        put(key, new Integer(value));
+        put(key, Integer.valueOf(value));
         return this;
     }
 
     /**
      * Put a key/long pair in the JSONObject.
-     * 
+     *
      * @param key A key string.
      * @param value A long which is the value.
      * @return this.
      * @throws JSONException this will be thrown if there is an error parsing the JSON If the key is null.
      */
     public JSONObject put(String key, long value) throws JSONException {
-        put(key, new Long(value));
+        put(key, Long.valueOf(value));
         return this;
     }
 
     /**
      * Put a key/value pair in the JSONObject, where the value will be a
      * JSONObject which is produced from a Map.
-     * 
+     *
      * @param key A key string.
      * @param value A Map value.
      * @return this.
@@ -842,7 +841,7 @@ public class JSONObject implements Serializable {
     /**
      * Put a key/value pair in the JSONObject. If the value is null,
      * then the key will be removed from the JSONObject if it is present.
-     * 
+     *
      * @param key A key string.
      * @param value An object which is the value. It should be of one of these
      *            types: Boolean, Double, Integer, JSONArray, JSONObject, Long, String,
@@ -867,7 +866,7 @@ public class JSONObject implements Serializable {
     /**
      * Put a key/value pair in the JSONObject, but only if the
      * key and the value are both non-null.
-     * 
+     *
      * @param key A key string.
      * @param value An object which is the value. It should be of one of these
      *            types: Boolean, Double, Integer, JSONArray, JSONObject, Long, String,
@@ -887,7 +886,7 @@ public class JSONObject implements Serializable {
      * right places. A backslash will be inserted within &lt;/, allowing JSON
      * text to be delivered in HTML. In JSON text, a string cannot contain a
      * control character or an unescaped quote or backslash.
-     * 
+     *
      * @param string A String
      * @return A String correctly formatted for insertion in a JSON text.
      */
@@ -900,7 +899,7 @@ public class JSONObject implements Serializable {
         char c = 0;
         int i;
         int len = string.length();
-        StringBuffer sb = new StringBuffer(len + 4);
+        StringBuilder sb = new StringBuilder(len + 4);
         String t;
 
         sb.append('"');
@@ -908,39 +907,39 @@ public class JSONObject implements Serializable {
             b = c;
             c = string.charAt(i);
             switch (c) {
-            case '\\':
-            case '"':
-                sb.append('\\');
-                sb.append(c);
-                break;
-            case '/':
-                if (b == '<') {
+                case '\\':
+                case '"':
                     sb.append('\\');
-                }
-                sb.append(c);
-                break;
-            case '\b':
-                sb.append("\\b");
-                break;
-            case '\t':
-                sb.append("\\t");
-                break;
-            case '\n':
-                sb.append("\\n");
-                break;
-            case '\f':
-                sb.append("\\f");
-                break;
-            case '\r':
-                sb.append("\\r");
-                break;
-            default:
-                if (c < ' ') {
-                    t = "000" + Integer.toHexString(c);
-                    sb.append("\\u" + t.substring(t.length() - 4));
-                } else {
                     sb.append(c);
-                }
+                    break;
+                case '/':
+                    if (b == '<') {
+                        sb.append('\\');
+                    }
+                    sb.append(c);
+                    break;
+                case '\b':
+                    sb.append("\\b");
+                    break;
+                case '\t':
+                    sb.append("\\t");
+                    break;
+                case '\n':
+                    sb.append("\\n");
+                    break;
+                case '\f':
+                    sb.append("\\f");
+                    break;
+                case '\r':
+                    sb.append("\\r");
+                    break;
+                default:
+                    if (c < ' ') {
+                        t = "000" + Integer.toHexString(c);
+                        sb.append("\\u").append(t.substring(t.length() - 4));
+                    } else {
+                        sb.append(c);
+                    }
             }
         }
         sb.append('"');
@@ -949,7 +948,7 @@ public class JSONObject implements Serializable {
 
     /**
      * Remove a name and its value, if present.
-     * 
+     *
      * @param key The name to be removed.
      * @return The value that was associated with the name,
      *         or null if there was no value.
@@ -960,7 +959,7 @@ public class JSONObject implements Serializable {
 
     /**
      * Throw an exception if the object is an NaN or infinite number.
-     * 
+     *
      * @param o The object to test.
      * @throws JSONException this will be thrown if there is an error parsing the JSON If o is a non-finite number.
      */
@@ -983,7 +982,7 @@ public class JSONObject implements Serializable {
     /**
      * Produce a JSONArray containing the values of the members of this
      * JSONObject.
-     * 
+     *
      * @param names A JSONArray containing a list of key strings. This
      *            determines the sequence of the values in the result.
      * @return A JSONArray of values.
@@ -1006,7 +1005,7 @@ public class JSONObject implements Serializable {
      * then null will be returned instead.
      * <p>
      * Warning: This method assumes that the data structure is acyclical.
-     * 
+     *
      * @return a printable, displayable, portable, transmittable
      *         representation of the object, beginning
      *         with <code>{</code>&nbsp;<small>(left brace)</small> and ending
@@ -1015,7 +1014,7 @@ public class JSONObject implements Serializable {
     public String toString() {
         try {
             Iterator keys = sortedKeys();
-            StringBuffer sb = new StringBuffer("{");
+            StringBuilder sb = new StringBuilder("{");
 
             while (keys.hasNext()) {
                 if (sb.length() > 1) {
@@ -1037,7 +1036,7 @@ public class JSONObject implements Serializable {
      * Make a prettyprinted JSON text of this JSONObject.
      * <p>
      * Warning: This method assumes that the data structure is acyclical.
-     * 
+     *
      * @param indentFactor The number of spaces to add to each level of
      *            indentation.
      * @return a printable, displayable, portable, transmittable
@@ -1054,7 +1053,7 @@ public class JSONObject implements Serializable {
      * Make a prettyprinted JSON text of this JSONObject.
      * <p>
      * Warning: This method assumes that the data structure is acyclical.
-     * 
+     *
      * @param indentFactor The number of spaces to add to each level of
      *            indentation.
      * @param indent The indentation of the top level.
@@ -1071,7 +1070,7 @@ public class JSONObject implements Serializable {
             return "{}";
         }
         Iterator keys = sortedKeys();
-        StringBuffer sb = new StringBuffer("{");
+        StringBuilder sb = new StringBuilder("{");
         int newindent = indent + indentFactor;
         Object o;
         if (n == 1) {
@@ -1116,7 +1115,7 @@ public class JSONObject implements Serializable {
      * produced by the rules.
      * <p>
      * Warning: This method assumes that the data structure is acyclical.
-     * 
+     *
      * @param value The value to be serialized.
      * @return a printable, displayable, transmittable
      *         representation of the object, beginning
@@ -1129,14 +1128,14 @@ public class JSONObject implements Serializable {
             return "null";
         }
         if (value instanceof JSONString) {
-            Object o;
+            String o;
             try {
                 o = ((JSONString) value).toJSONString();
             } catch (Exception e) {
                 throw new JSONException(e);
             }
             if (o instanceof String) {
-                return (String) o;
+                return o;
             }
             throw new JSONException("Bad value from toJSONString: " + o);
         }
@@ -1154,7 +1153,7 @@ public class JSONObject implements Serializable {
      * Make a prettyprinted JSON text of an object value.
      * <p>
      * Warning: This method assumes that the data structure is acyclical.
-     * 
+     *
      * @param value The value to be serialized.
      * @param indentFactor The number of spaces to add to each level of
      *            indentation.
@@ -1172,9 +1171,9 @@ public class JSONObject implements Serializable {
         }
         try {
             if (value instanceof JSONString) {
-                Object o = ((JSONString) value).toJSONString();
+                String o = ((JSONString) value).toJSONString();
                 if (o instanceof String) {
-                    return (String) o;
+                    return o;
                 }
             }
         } catch (Exception e) {
@@ -1200,7 +1199,7 @@ public class JSONObject implements Serializable {
      * For compactness, no whitespace is added.
      * <p>
      * Warning: This method assumes that the data structure is acyclical.
-     * 
+     *
      * @param writer the writer
      * @return The writer.
      * @throws JSONException this will be thrown if there is an error parsing the JSON
